# python-odata

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.codebuild/: develop-build.yml  feature-build.yml  production-build.yml
odata/: metadata.py  service.py
